--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "angular": "~1.2.26",
     "angular-sanitize": "~1.2.26",
     "angular-mocks": "~1.2.26",
-    "angular-route": "~1.3.8"
+    "angular-route": "~1.3.8",
+    "animate-sass": "~0.6.2"
   }
 }
