update package and bower

--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
-  "name": "angularjs-jf-contextual-spinner",
+  "name": "angularjs-navbar-loader",
   "version": "0.0.1",
   "authors": [
     "Jake Foraker <jakeforaker83@gmail.com>"
   ],
   "description": "Contextual Loading spinner for AngularJS",
-  "repository": "git@github.com:mohsen1/angular-directive-boilerplate.git",
+  "repository": "https://github.com/jforaker/angular-nav-bar-loader",
   "main": "demo/directive.js",
   "license": "MIT",
   "private": false,
